--- a/style.css
+++ b/style.css
@@ -43,5 +43,72 @@ body{
     height: 180px;
     border-radius: 50%;
     background: #000;
-    background-image: ;
+    background-image: url(/assets/images/Faded\(1\).png);
+    background-size: cover;
+    box-shadow: 0 0 0 10px rgba(255, 255, 255, 0.08);
+}
+.song-slider{
+    width: 100%;
+    position: relative;
+}
+.seek-bar{
+   -webkit-appearance: none;
+    width: 100%;
+    height: 5px;
+    border-radius: 10px;
+    background: #7fc8a9;
+    overflow: hidden;
+    cursor: pointer;
+}
+.seek-bar::-webkit-slider-thumb{
+    -webkit-appearance:none;
+    width: 10px;
+    height: 20px;
+    box-shadow: -400px 0 0 400px #d5eebb;
+
+}
+.current-time, 
+.song-duration
+{
+   font-size: 14px;
+}
+.song-duration{
+    position: absolute;
+    right: 0;
+    /*margin-top: -18px;*/
+}
+.controls{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    margin-top: 20px;
+}
+.play-btn{
+    position: relative;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background: #d5eebb;
+    cursor: pointer;
+    border: none;
+}
+.play-btn span{
+    position: absolute;
+    top: 50%;
+    left: 25%;
+    transform: translateY(-50%);
+    width: 10px;
+    height: 30px;
+    border-radius: 2px;
+    background: #5f7a61;
+    transition: .5s;
+}
+.play-btn span:nth-child(2){
+    left: 55%;
+    transform-origin: center;
+}
+.play-btn.pause span:nth-child(2){
+    transform: translateY(-50%) scaleY(0);
 }
